<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="界面">
        <Preference
            android:key="change_icons"
            android:title="更换天气图标"/>
        <Preference
            android:key="change_update_time"
            android:title="自动刷新频率"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="系统">
        <SwitchPreference
            android:key="notification_model"
            android:checked="true"
            android:title="通知栏常驻"/>
        <Preference
            android:key="clear_cache"
            android:title="清除缓存"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/widget"
         >

        <ListPreference
            android:key="@string/key_widget_time"
            android:title="@string/widget_time_title"
            android:summary="@string/widget_time_summary"
            android:entries="@array/widget_time_list"
            android:entryValues="@array/widget_time_key"
            android:dialogTitle="@string/widget_time_title"
            android:defaultValue="@string/widget_time_default" />

    </PreferenceCategory>
</PreferenceScreen>